--- a/css/index.css
+++ b/css/index.css
@@ -157,16 +157,13 @@ footer nav a {
 .header-section {
     border: 1px solid blue;
     display: flex;
+    width: 100%;
+    align-items: center;
  }
-
- .links {
-     display:flex;
-     justify-content: space-evenly;
- }
-
+ 
 .links a {
     border: 1px solid blue;
     text-decoration: none;
     color: grey;
-    justify-content: space-evenly;
+        
 }
