--- a/css/index.css
+++ b/css/index.css
@@ -149,35 +149,35 @@ footer nav a {
 /* my code starts here */
 
 .container {
-    border: 1px solid blue;
+  
     margin: 0;
     width: 100%
 }
 
 .header-section {
-    border: 1px solid blue;
+   
     display: flex;
     width: 100%;
     align-items: center;
  }
  
 .links a {
-    border: 1px solid blue;
+  
     text-decoration: none;
     color: grey;    
     
 }
 .logo {
-    border: 1px solid blue;
+   
   }
 
 .links {
-    border: 1px solid blue;
+   
 }
 
 
 .header-image img {
-    border: 1px solid blue;
+    
 	width: 100%;
     object-fit: fill;
     padding-top: 5%;
@@ -232,4 +232,11 @@ footer nav a {
 #dodgerblue {
     background-color: dodgerblue;
     color: white;
+}
+
+.header-image #about-page {
+    width: 100%;
+    object-fit: fill;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
