30 minutes left I like what i have so far but have 2 main problems left to address.  I need to fix the nav bar the links are not justifying across the page.  I need to format the 4 boxes on the about page properly

--- a/css/index.css
+++ b/css/index.css
@@ -240,15 +240,37 @@ footer nav a {
  }
 
 .about-top {
+    border-bottom: 1px dotted black;
     padding: 2%;
  }
 
  .firstrow {
+    
      display: flex;
+     justify-content: space-between;
+     padding-top: 2%;
+ }
+
+ .firstrow .strategy, .howWork {
+     width: 48%;
+     
  }
 
  .secondrow {
+    
      display: flex;
+     justify-content: space-between;
+     padding-top: 2%;
+     padding-bottom: 2%;
  }
 
+ .secondrow .strategy, .howWork {
+     width: 48%;
+     
+ }
+
+.together {
+    border-top: 1px dotted grey;
+    padding: 3% 0%;
+}
 
