--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,7 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+    text-align: center;
 }
 
 
@@ -154,27 +155,32 @@ footer nav a {
     width: 100%
 }
 
-.header-section {
-   
-    display: flex;
-    width: 100%;
-    align-items: center;
- }
- 
-.links a {
-  
-    text-decoration: none;
-    color: grey;    
-    
+
+nav {
+	display: flex;
+	padding-bottom:25px;
 }
-.logo {
-   
-  }
 
 .links {
-   
+	
+	display:flex;
+	width:70%;
+	justify-content:space-evenly;
+	align-items:center;
 }
 
+.links a {
+	
+	text-decoration:none;
+	width:25%;
+	text-align:center;		
+}
+
+.logo {
+
+	width:25%;
+	text-align:center;
+}
 
 .header-image img {
     
