--- a/css/index.css
+++ b/css/index.css
@@ -149,12 +149,10 @@ footer nav a {
 
 /* my code starts here */
 
-.container {
-  
-    margin: 0;
-    width: 100%
+.container  {  
+    margin: 0 auto;
+    max-width: 70%
 }
-
 
 nav {
 	display: flex;
@@ -241,24 +239,23 @@ nav {
 }
 
 .header-image #about-page {
-    width: 100%;
-    object-fit: fill;
+        object-fit: fill;
  }
 
 .about-top {
     border-bottom: 1px dotted black;
-    padding: 2%;
+    
  }
 
  .firstrow {
     
      display: flex;
      justify-content: space-between;
-     padding-top: 2%;
+     
  }
 
  .firstrow .strategy, .howWork {
-     width: 48%;
+     
      
  }
 
@@ -266,17 +263,16 @@ nav {
     
      display: flex;
      justify-content: space-between;
-     padding-top: 2%;
-     padding-bottom: 2%;
+     
  }
 
  .secondrow .strategy, .howWork {
-     width: 48%;
+     
      
  }
 
 .together {
     border-top: 1px dotted grey;
-    padding: 3% 0%;
+   
 }
 
