--- a/css/index.css
+++ b/css/index.css
@@ -281,7 +281,19 @@ nav {
  }
 
 .together {
+    padding: 2%;   
+}
+
+button {
+    font-size: 16px;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid black;
     padding: 2%;
-   
+    font-size: .9em;
+}
+
+#padding {
+    padding: 3%;
 }
 
